# Calc_Test_C-

./: CMakeLists.txt  README.md  Synergy.cpp  Synergy.vcxproj  Synergy.vcxproj.filters  Synergy_Caalc.sln
CMake_Calc_C++/: CMakeLists.txt  CMake_Calc_C++.cpp  CMake_Calc_C++.h
Synergy/: Synergy.cpp
